--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
+<!DOCTYPE html>
 <html>
-    <title>
-        Events Hub
-    </title>
+    <header>
+    </header>
+
+    <body>
+        <h1>EventHub</h1>
+        <h2>Features</h2>
+    </body>
+
+    <footer>
+    </footer>
 </html>
