--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <body>
         <h1>EventHub</h1>
         <h2>Features</h2>
+        <ol>
+            <li>Create an account</li>
+            <li>Search events specific to your campus</li>
+            <li>Create an event for your campus</li>
+            <li>Host events through an organization on campus</li>
+        </ol>
     </body>
 
     <footer>
