--- a/index.html
+++ b/index.html
@@ -7,11 +7,18 @@
         <h1>EventHub</h1>
         <h2>Features</h2>
         <ol>
-            <li>Create an account</li>
+            <li>Keep track of your events in via your own account</li>
             <li>Search events specific to your campus</li>
             <li>Create an event for your campus</li>
             <li>Host events through an organization on campus</li>
+            <li>Host both public and private events</li>
+            <li>Deny or approve access on an individual basis</li>
+            <li>Send invitiations to all members of an organization</li>
         </ol>
+        <h2>Getting Started</h2>
+        <h3>Create a new account</h3>
+        <p>It's fast and simple</p>
+        <h2>
     </body>
 
     <footer>
